plugins {
    id 'fabric-loom' version "${loom_version}"
    id 'maven-publish'
}

version = project.mod_version
group = project.maven_group

base {
    archivesName = project.archives_base_name
}

repositories {
    maven { url = "https://repo.opencollab.dev/main/" }
    maven { url = 'https://maven.nucleoid.xyz' }
    maven { url = "https://maven.terraformersmc.com/" }
    maven { url = "https://maven.ladysnake.org/releases" }

    maven {
        name = "Modrinth"
        url = "https://api.modrinth.com/maven"
    }
}

loom {
    splitEnvironmentSourceSets()

    runs {
    }

    mods {
        "serverbackpacks" {
            sourceSet sourceSets.main
            sourceSet sourceSets.client
        }
    }
}

configurations {
    shadowBundle {
        canBeResolved = true
        canBeConsumed = false
    }
}

dependencies {
    minecraft "com.mojang:minecraft:${project.minecraft_version}"
    mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
    modImplementation "net.fabricmc:fabric-loader:${project.loader_version}"
    modImplementation "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"

    modImplementation ("eu.pb4:polymer-core:${project.polymer}")
    modImplementation ("eu.pb4:polymer-blocks:${project.polymer}")
    modImplementation ("eu.pb4:polymer-resource-pack:${project.polymer}")
    modImplementation ("eu.pb4:polymer-virtual-entity:${project.polymer}")

    modImplementation include("eu.pb4:sgui:${project.sgui}")
    modImplementation include("eu.pb4:common-protection-api:1.0.0")
    modImplementation include("xyz.nucleoid:server-translations-api:${project.server_translations}")
    modImplementation include("me.lucko:fabric-permissions-api:${project.fabric_permissions_version}")

    modCompileOnly ("maven.modrinth:bedframe:0.1.1")
    modCompileOnly("eu.pb4.polyport:trinkets:${project.trinkets}")
    compileOnly("org.geysermc.geyser:api:${project.geyser}")
}

processResources {
    inputs.property "version", project.version

    filesMatching("fabric.mod.json") {
        expand "version": project.version
    }
}

tasks.withType(JavaCompile).configureEach {
    it.options.release = 21
}

java {
    // Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
    // if it is present.
    // If you remove this line, sources will not be generated.
    withSourcesJar()

    sourceCompatibility = JavaVersion.VERSION_21
    targetCompatibility = JavaVersion.VERSION_21
}

jar {
    from("LICENSE") {
        rename { "${it}_${project.base.archivesName.get()}"}
    }
}

// configure the maven publication
publishing {
    publications {
        create("mavenJava", MavenPublication) {
            artifactId = project.archives_base_name
            from components.java
        }
    }

    // See https://docs.gradle.org/current/userguide/publishing_maven.html for information on how to set up publishing.
    repositories {
        // Add repositories to publish to here.
        // Notice: This block does NOT have the same function as the block in the top level.
        // The repositories here will be used for publishing your artifact, not for
        // retrieving dependencies.
    }
}

fabricApi {
    configureDataGeneration()
}